Widescreen mid-loading fix set important padding on content div so that the right column doesn't appear to jump around as dashboard fixes is being processed.

--- a/firefox/missinge/data/dashboardFixes/widescreen.css
+++ b/firefox/missinge/data/dashboardFixes/widescreen.css
@@ -27,7 +27,7 @@ min-width:900px;
 }
 
 #content {
-padding-right:255px;
+padding-right:255px !important;
 }
 
 #left_column {
